--- a/ws_event_page/templates/emails/hr_payment_confirmation.html
+++ b/ws_event_page/templates/emails/hr_payment_confirmation.html
@@ -9,12 +9,16 @@
     <h3 style="text-align: center; color: #3b6dae">
       THANK YOU FOR YOUR PAYMENT FOR HAPPY RUN 2025 EVENT
     </h3>
+    <p>
+      Mã đơn hàng | <em>Order ID</em>:
+      <span style="color: #f05023; font-weight: bold">{{order_id}}</span>
+    </p>
     <!-- Order detail -->
     <table
       class="table"
       style="background-color: azure; border: 1px solid #3b6dae"
     >
-      <thead style="background: #3b6dae45">
+      <thead style="background: #3b6dae45; font-size: 12px">
         <tr>
           <th
             scope="col"
@@ -31,21 +35,24 @@
             Mã số vé
           </th> -->
           <th scope="col" style="border-color: #3b6dae; color: #172a52">
-            Họ tên
+            Họ tên <br />
+            <em>Full name</em>
           </th>
           <th
             scope="col"
             style="border-color: #3b6dae; color: #172a52"
             width="140"
           >
-            Hạng vé
+            Hạng vé <br />
+            <em>Ticket type</em>
           </th>
           <th
             scope="col"
             style="border-color: #3b6dae; color: #172a52"
-            width="80"
+            width="100"
           >
-            Size áo
+            Size áo <br />
+            <em>T-shirt size</em>
           </th>
           <th
             scope="col"
@@ -59,7 +66,8 @@
             style="border-color: #3b6dae; color: #172a52"
             width="80"
           >
-            Giá vé
+            Giá vé <br />
+            <em>Price</em>
           </th>
         </tr>
       </thead>
@@ -83,7 +91,7 @@
     <!-- Payment details -->
     <div class="text-right" style="margin-top: 20px">
       <p style="color: #172a52">
-        <strong>Tổng tiền | <em>Total price</em>:</strong> {{total_price}}
+        Tổng tiền | <em>Total price</em>: <strong>{{total_price}}</strong>
       </p>
     </div>
 
@@ -96,16 +104,16 @@
       >
       <br />
       <a href="{{order_detail_link}}" target="_blank"
-        >Chi tiết đơn hàng | Order Detail</a
-      >
+        >Chi tiết đơn hàng | Order Detail
+      </a>
     </p>
 
     <p class="text-center" style="margin-top: 20px; color: #172a52">
       Xin chân thành cảm ơn và hẹn gặp lại các bạn tại sự kiện Happy Run 2025!
       <br />
-      <span style="color: #3b6dae"
-        ><em>Thank you and see you at Happy Run 2025 event!</em></span
-      >
+      <span style="color: #3b6dae">
+        <em>Thank you and see you at Happy Run 2025 event!</em>
+      </span>
     </p>
   </div>
 </div>
