happy-run: update order confirmation email

--- a/ws_event_page/templates/emails/hr_order_confirmation.html
+++ b/ws_event_page/templates/emails/hr_order_confirmation.html
@@ -116,6 +116,18 @@
           ></span
         >
       </p>
+      <p class="text-center" style="color: #172a52">
+        Lưu ý: Xác nhận thanh toán thành công sẽ gửi về email 1-2 ngày sau khi
+        tiến hành thanh toán (không bao gồm cuối tuần).
+
+        <br />
+        <span style="color: #3b6dae"
+          ><em
+            >Note: A payment confirmation will be sent to your email within 1-2
+            days after completing your payment (excluding weekends).</em
+          ></span
+        >
+      </p>
     </div>
     <div class="text-center" style="margin: 20px 0">{{ qr_code_img_tag }}</div>
 
