placement-test: add check in for test day, change email template to inline style, sort test slots by date and start time

--- a/ws_event_page/templates/emails/ac_confirmation_email.html
+++ b/ws_event_page/templates/emails/ac_confirmation_email.html
@@ -1,42 +1,11 @@
-<style>
-  .container {
-    width: 100%;
-    max-width: max-content;
-    margin: auto;
-    padding: 10px 0px;
-    text-align: justify;
-  }
-  .container .en-language {
-    color: #00539c !important;
-  }
-  .container .vn-language {
-    color: #102131 !important;
-  }
-  .container p {
-    margin: 10px 0;
-  }
-  .container ol {
-    margin: 5px 0px;
-  }
-  .container ul {
-    margin: 5px 0px;
-  }
-  .container .qr-code {
-    text-align: center;
-    margin: 15px 0;
-  }
-  .container .section {
-    margin-bottom: 30px;
-  }
-  .container hr {
-    border: none;
-    border-top: 1px solid #ccc;
-    margin: 30px 0;
-  }
-</style>
-
-<div class="container">
-  <div class="section vn-language">
+<div
+  class="container"
+  style="width: 100%; margin: auto; padding: 10px 0px; text-align: justify"
+>
+  <div
+    class="section vn-language"
+    style="margin-bottom: 30px; color: #102131 !important"
+  >
     <p>
       Kính gửi Quý Phụ huynh Học sinh
       <strong>{{lead.student_full_name}}</strong>, Lớp <strong>1</strong> (Năm
@@ -66,7 +35,7 @@
           </li>
           <li>
             Mã QR:
-            <div class="qr-code">
+            <div class="qr-code" style="text-align: center; margin: 15px 0">
               <!-- Replace the src with your QR code image URL -->
               <img
                 src="{{lead.qr_code}}"
@@ -155,10 +124,10 @@
     />
   </div>
 
-  <hr />
+  <hr style="border: none; border-top: 1px solid #ccc; margin: 30px 0" />
 
   <!-- English Version -->
-  <div class="section en-language">
+  <div class="section en-language" style="color: #00539c !important">
     <p>
       Dear Parents of Student
       <strong>{{lead.student_full_name}}</strong>, Grade <strong>1</strong> (SY
@@ -188,7 +157,7 @@
           </li>
           <li>
             <em>QR Code:</em>
-            <div class="qr-code">
+            <div class="qr-code" style="text-align: center; margin: 15px 0">
               <!-- Replace the src with your QR code image URL -->
               <img
                 src="{{lead.qr_code}}"
