--- a/ws_event_page/templates/emails/ac_test_invitation_general.html
+++ b/ws_event_page/templates/emails/ac_test_invitation_general.html
@@ -8,70 +8,77 @@
   >
     <p>
       Kính gửi Quý Phụ huynh Học sinh
-      <strong>{{lead.student_full_name}}</strong>, Số Thứ tự:
+      <strong>{{lead.student_full_name}}</strong>, Số thứ tự:
       <strong>{{lead.registration_number}}</strong>,
     </p>
 
     <p>
-      Wellspring Saigon cảm ơn Quý Phụ huynh đã quan tâm và đăng ký Chương trình
-      Tuyển sinh "Trưởng thành Hạnh phúc - Kết nối tương lai" năm học 2025-2026,
-      cũng như lựa chọn Nhà trường là môi trường học tập tiềm năng cho con em
-      sắp tới.
+      Wellspring Saigon cảm ơn Quý Phụ huynh đã quan tâm và đăng ký tham gia
+      chương trình Tuyển sinh "Trưởng thành Hạnh phúc - Kết nối Tương lai" dành
+      cho Học sinh Lớp 1 năm học 2025-2026, cũng như lựa chọn Nhà trường là môi
+      trường học tập tiềm năng cho con em sắp tới.
     </p>
 
     <p>
-      Tiếp nối Chương trình Tuyển sinh dành cho Học sinh lớp 1, Nhà trường xin
-      thông tin chi tiết về chương trình “<strong>Khảo sát đầu vào</strong>” như
-      sau:
+      Tiếp theo, Nhà trường xin thông tin chi tiết về chương trình “<strong
+        >Khảo sát đầu vào</strong
+      >” như sau:
     </p>
 
     <ul>
       <li>
         <strong>Thời gian tổ chức:</strong> vào sáng Thứ Bảy (ngày 01/03/2025)
-        và các ngày trong tuần (từ ngày 03/03/2025 đến 14/03/2025).
+        và các ngày trong tuần (từ Thứ Hai ngày 03/03/2025 đến Thứ Sáu ngày
+        14/03/2025).
       </li>
       <li>
-        <strong>Hình thức khảo sát:</strong> Học sinh sẽ thực hiện Phỏng vấn 1:1
-        kéo dài tối đa 30 phút, bao gồm:
+        <strong>Hình thức khảo sát:</strong> Học sinh sẽ được Phỏng vấn trực
+        tiếp 1:1 tối đa 30 phút, bao gồm:
         <ul>
           <li>15 phút với Giáo viên Chương trình Quốc tế.</li>
           <li>15 phút với Giáo viên Chương trình Việt Nam.</li>
         </ul>
       </li>
       <li>
-        <strong>Hướng dẫn đăng ký:</strong> Quý Phụ huynh vui lòng đăng ký lịch
-        khảo sát phù hợp cho Học sinh tại đường dẫn:
-        <a href="{{registration_link}}" target="_blank">LINK</a>
-      </li>
-      <li>
-        <strong><u>Lưu ý:</u></strong>
-        <ul>
-          <li>
-            Hệ thống đăng ký đặt lịch khảo sát được thiết lập theo chế độ ưu
-            tiên cho những Phụ huynh sắp xếp lịch hẹn và chọn trước; thứ tự sắp
-            xếp khung giờ tùy thuộc vào thời điểm.
-          </li>
-          <li>
-            Quý Phụ huynh đăng ký trên Hệ thống. Hệ thống sẽ được đóng tự động
-            vào <strong>17:00 giờ Thứ Năm, ngày 27/02/2025.</strong>
-          </li>
-        </ul>
+        <strong>Hướng dẫn đăng ký:</strong> Quý Phụ huynh vui lòng đăng ký
+        <u>lịch khảo sát</u> phù hợp cho Học sinh tại đường dẫn:
+        <p>
+          <a
+            class="btn btn-primary"
+            href="{{registration_link}}"
+            target="_blank"
+            >Form Đăng Ký</a
+          >
+        </p>
+        <p>
+          <em>
+            <u>Lưu ý:</u> Form đăng ký được thiết lập theo chế độ ưu tiên cho
+            những Phụ huynh sắp xếp lịch hẹn và lựa chọn trước; thứ tự sắp xếp
+            khung giờ tùy thuộc vào thời điểm Quý Phụ huynh đăng ký trên Hệ
+            thống. Form đăng ký sẽ được đóng tự động vào
+            <span style="color: #f05023">
+              17:00 giờ Thứ Năm, ngày 27/02/2025</span
+            >.
+          </em>
+        </p>
       </li>
       <li>
         <strong>Phí khảo sát:</strong> 2.000.000 VNĐ/Học sinh/lần khảo sát.
         <p>
-          <u>Lưu ý:</u> Phụ huynh vui lòng mang theo 01 hình thẻ Học sinh (kích
-          thước 3x4 hoặc 4x6) nếu chưa cung cấp cho Nhà trường khi đăng ký Tuyển
-          sinh.
+          <em
+            ><u>Lưu ý:</u> Phụ huynh vui lòng mang theo 01 hình thẻ Học sinh
+            (kích thước 3x4 hoặc 4x6) nếu chưa cung cấp cho Nhà trường khi đăng
+            ký Tuyển sinh.</em
+          >
         </p>
       </li>
       <li>
-        <strong>Kết quả khảo sát:</strong> Kết quả sẽ được Hội đồng Tuyển sinh
-        gửi trực tiếp đến email Phụ huynh dự kiến từ sau ngày 24/03/2025.
+        <strong>Kết quả khảo sát:</strong> Kết quả sẽ được gửi trực tiếp đến
+        email Phụ huynh, dự kiến từ sau ngày 24/03/2025.
       </li>
       <li>
-        <strong>Biểu phí và ưu đãi:</strong> Quý Phụ huynh vui lòng tham khảo
-        thêm Biểu phí và Chính sách ưu đãi tài chính năm học 2025-2026
+        <strong>Biểu phí và ưu đãi:</strong> Quý Phụ huynh tham khảo thêm Biểu
+        phí và Chính sách ưu đãi tài chính năm học 2025-2026
         <a
           href="https://wellspring-production.s3.ap-southeast-1.amazonaws.com/WSSG_Bieu_phi_Chinh_sach_uu_dai_Tai_chinh_Fee_Schedule_SY_2025_2026_1_20af38a1b1.pdf"
           target="_blank"
@@ -81,13 +88,19 @@
     </ul>
 
     <p>
-      Nếu Quý Phụ huynh có bất kỳ thắc mắc nào hoặc cần thêm thông tin, vui lòng
+      Quý Phụ huynh có bất kỳ thắc mắc nào hoặc cần thêm thông tin, vui lòng
       liên hệ với Phòng Tuyển sinh qua:
     </p>
 
     <ul>
-      <li><strong>Hotline:</strong> 0937 099 229</li>
-      <li><strong>Email:</strong> admissions@wellspringsaigon.edu.vn</li>
+      <li>
+        <span style="width: 10px; margin-right: 5px">📞</span
+        ><strong>Hotline:</strong> 0937 099 229
+      </li>
+      <li>
+        <span style="width: 10px; margin-right: 5px">✉️</span
+        ><strong>Email:</strong> admissions@wellspringsaigon.edu.vn
+      </li>
     </ul>
 
     <p>
@@ -96,7 +109,7 @@
     </p>
 
     <p>Trân trọng cảm ơn,</p>
-    <p>Hội đồng Tuyển sinh Wellspring Saigon</p>
+    <p><strong>Hội đồng Tuyển sinh Wellspring Saigon</strong></p>
   </div>
 
   <hr style="border: none; border-top: 1px solid #ccc; margin: 30px 0" />
@@ -110,7 +123,7 @@
     </p>
 
     <p>
-      Thank you for your interest and registration in Wellspring Saigon'
+      Thank you for your interest and registration in Wellspring Saigon’
       Enrollment Program school year 2025-2026 "A journey of Joyful Growth and
       Future connections", as a potential learning environment for your
       children.
@@ -123,44 +136,49 @@
 
     <ul>
       <li>
-        <strong>Placement Test Schedule:</strong> Saturday, March 1, 2025, and
-        weekdays from March 3, 2025, to March 14, 2025.
+        <strong>Schedule:</strong> on Saturday (March 1st 2025), and weekdays
+        (from Monday March 3rd 2025 to Friday March 14th 2025).
       </li>
       <li>
-        <strong>Placement Test Format:</strong> Each student will participate in
-        a 1:1 interview, lasting a maximum of 30 minutes, consisting of:
+        <strong>Format:</strong> Each student will participate in a 1:1 directly
+        interview, maximum of 30 minutes, including:
         <ul>
           <li>15 minutes with an International Program teacher.</li>
           <li>15 minutes with a Vietnamese Program teacher.</li>
         </ul>
       </li>
       <li>
-        <strong>Registration Instructions: </strong> Parents are kindly
-        requested to select a suitable placement test schedule for your child
-        via the following registration link:
-        <a href="{{registration_link}}" target="_blank">LINK</a>
-      </li>
-      <li>
-        <strong><u>Important Notes:</u></strong>
-        <ul>
-          <li>
-            The scheduling system prioritizes parents who book their
-            appointments earlier. The available time slots are allocated based
-            on the registration time.
-          </li>
-          <li>
-            The system will automatically close at
-            <strong>5:00 PM on Thursday, February 27, 2025.</strong>
-          </li>
-        </ul>
+        <strong>Registration Instructions:</strong> Parents are kindly requested
+        to select a suitable placement test schedule for your child via the
+        following registration link:
+        <p style="display: flex; justify-content: center">
+          <a
+            class="btn btn-primary"
+            href="{{registration_link}}"
+            target="_blank"
+            >Registration Form</a
+          >
+        </p>
+        <p>
+          <em>
+            <u>Notes:</u> The registration form operates on a first-come,
+            first-served basis. The available time slots will be assigned based
+            on the time of registration. The form will automatically close at
+            <span style="color: #f05023"
+              >5:00 PM on Thursday, February 27th 2025.</span
+            >
+          </em>
+        </p>
       </li>
       <li>
         <strong>Placement Test Fee:</strong> 2,000,000 VND/student per placement
         test.
         <p>
-          <u>Additional Requirements:</u> If not already submitted during the
-          application process, parents are kindly requested to bring one student
-          ID photo (size 3x4 cm or 4x6 cm) on the placement test day.
+          <em
+            ><u>Notes:</u> Parents are requested to bring one student ID photo
+            (size 3x4 cm or 4x6 cm) if it has not been submitted during the
+            enrollment process.</em
+          >
         </p>
       </li>
       <li>
@@ -170,22 +188,29 @@
       </li>
       <li>
         <strong>Fees Schedule & Financial Incentive Policy:</strong> Parents may
-        refer to the Fee Schedule and Financial Incentive Policy 2025-2026 [<a
+        refer to the Fee Schedule and Financial Incentive Policy 2025-2026
+        <a
           href="https://wellspring-production.s3.ap-southeast-1.amazonaws.com/WSSG_Bieu_phi_Chinh_sach_uu_dai_Tai_chinh_Fee_Schedule_SY_2025_2026_1_20af38a1b1.pdf"
           target="_blank"
           >here</a
-        >].
+        >.
       </li>
     </ul>
 
     <p>
       For any inquiries or further information, please do not hesitate to
-      contact the Admissions Office via:
+      contact the <strong>Admissions Office</strong> via:
     </p>
 
     <ul>
-      <li><strong>Hotline:</strong> 0937 099 229</li>
-      <li><strong>Email:</strong> admissions@wellspringsaigon.edu.vn</li>
+      <li>
+        <span style="width: 10px; margin-right: 5px">📞</span
+        ><strong>Hotline:</strong> 0937 099 229
+      </li>
+      <li>
+        <span style="width: 10px; margin-right: 5px">✉️</span
+        ><strong>Email:</strong> admissions@wellspringsaigon.edu.vn
+      </li>
     </ul>
 
     <p>
@@ -194,6 +219,6 @@
     </p>
 
     <p>Best regards,</p>
-    <p>Wellspring Saigon Admission Team</p>
+    <p><strong>Wellspring Saigon Admission Team</strong></p>
   </div>
 </div>
