placement-test: edit email template

--- a/ws_event_page/templates/emails/ac_test_registration_confirmation.html
+++ b/ws_event_page/templates/emails/ac_test_registration_confirmation.html
@@ -161,7 +161,7 @@
     </p>
 
     <p>
-      Thank you for your successfully registration in Wellspring Saigon'
+      Thank you for your successfully registration in Wellspring Saigon
       Placement Test Program for new Grade 1 Students of the school year
       2025-2026.
     </p>
@@ -179,8 +179,8 @@
         >
       </li>
       <li>
-        <strong>Location:</strong> Gate B - Wellspring Saigon, 92 Nguyễn Hữu
-        Cảnh, Ward 22, Bình Thạnh District, HCMC.
+        <strong>Location:</strong> Gate B - Wellspring Saigon, 92 Nguyen Huu
+        Canh Street, Ward 22, Binh Thanh District, HCMC.
       </li>
       <li>
         <strong>Format:</strong> Each student will participate in a 1:1
