happy-run: fix total_price of order cancellation email

--- a/ws_event_page/templates/emails/hr_order_cancellation.html
+++ b/ws_event_page/templates/emails/hr_order_cancellation.html
@@ -75,7 +75,7 @@
     <!-- Payment details -->
     <div class="text-right" style="margin-top: 20px">
       <p style="color: #172a52">
-        Tổng tiền | <em>Total price</em>: {<strong>{total_price}}</strong>
+        Tổng tiền | <em>Total price</em>: <strong>{{total_price}}</strong>
       </p>
     </div>
 
