ac: update ds1 email template

--- a/ws_event_page/templates/emails/ac_ds1_pass_confirmation.html
+++ b/ws_event_page/templates/emails/ac_ds1_pass_confirmation.html
@@ -70,11 +70,17 @@
       vinh dự chào đón Em với tất cả niềm tin yêu.
     </p>
 
-    <p>Phòng Tuyển sinh xin gửi các thông tin:</p>
+    <p>
+      Chúng tôi xin gửi các thông tin về Báo cáo khảo sát của Học sinh, Thư chúc
+      mừng Trúng tuyển, và các hướng dẫn về Thủ tục nhập học cho Học sinh theo
+      đường dẫn thư mục: (<a href="{{lead.result_folder_link}}" target="_blank"
+        >LINK</a
+      >)
+    </p>
 
     <ol>
-      <li>Báo cáo khảo sát của Học sinh: Theo tập tin đính kèm</li>
-      <li>Thư chúc mừng Trúng tuyển: Theo tập tin đính kèm</li>
+      <li>Báo cáo khảo sát của Học sinh</li>
+      <li>Thư chúc mừng Trúng tuyển</li>
       <li>
         Thủ tục và Quy trình nhập học dành cho Học sinh:
         <a
@@ -178,11 +184,19 @@
       genuine love.
     </p>
 
-    <p>The Admissions Office would like to send the following information:</p>
+    <p>
+      We would like to send the information about the Student Placement Test
+      Report, Acceptance Letter, and instructions on the Admission Procedure for
+      the student in the following links: (<a
+        href="{{lead.result_folder_link}}"
+        target="_blank"
+        >LINK</a
+      >)
+    </p>
 
     <ol>
-      <li>Student Placement Test Report: Please see the attachment</li>
-      <li>Acceptance Letter: Please see the attachment</li>
+      <li>Student Placement Test Report</li>
+      <li>Acceptance Letter</li>
       <li>
         Admission procedures for Students:
         <a
