ac: update ds4 email template

--- a/ws_event_page/templates/emails/ac_ds4_fail_confirmation.html
+++ b/ws_event_page/templates/emails/ac_ds4_fail_confirmation.html
@@ -43,7 +43,13 @@
       đồng WISers trong thời gian sớm nhất.
     </p>
 
-    <p>Đính kèm là Báo cáo khảo sát của Học sinh.</p>
+    <p>
+      Quý Phụ huynh có thể xem Báo cáo khảo sát của Học sinh tại đường link: (<a
+        href="{{lead.result_folder_link}}"
+        target="_blank"
+        >LINK</a
+      >)
+    </p>
 
     <p>Trân trọng,</p>
     <p>Phòng Tuyển sinh</p>
@@ -98,7 +104,13 @@
       as soon as possible.
     </p>
 
-    <p>Kindly find the attachment for the Student Placement Test Report.</p>
+    <p>
+      Please find the Student Placement Test Report at this link: (<a
+        href="{{lead.result_folder_link}}"
+        target="_blank"
+        >LINK</a
+      >)
+    </p>
 
     <p>Best regards,</p>
     <p>Admissions Office</p>
