Update email template HR

--- a/ws_event_page/templates/emails/hr_runner_kit_notice.html
+++ b/ws_event_page/templates/emails/hr_runner_kit_notice.html
@@ -1,208 +1,57 @@
 <div style="width: 100%; margin: auto; padding: 10px 0px; text-align: justify">
   <div class="section vn-language" style="margin-bottom: 30px">
-    <p style="margin: 0 0 10px">Xin chào,</p>
+    <span class="im">
+      <h1 style="text-align: center">
+        <span style="color: #009582">CHUẨN BỊ SẴN SÀNG CHO SỰ KIỆN HAPPY RUN 2025</span>
+      </h1>
+      <h2 style="text-align: center">
+        <span style="color: #172a52">“SET YOUR PACE, EMBRACE WELLNESS”</span>
+      </h2>
+      <h3 style="text-align: center; color: #3b6dae">
+        GET READY FOR HAPPY RUN 2025 “SET YOUR PACE, EMBRACE WELLNESS”
+      </h3>
+    </span>
+    <p style="margin: 0 0 10px">Các WISers ơi,</p>
     <p style="margin: 0 0 10px">
-      BTC Happy Run xin gửi đến bạn thời gian và địa điểm nhận Runner-kit như
-      sau:
+      Chỉ còn 01 ngày nữa sự kiện Happy run 2025 “Set your pace - Embrace wellness” sẽ chính thức bắt đầu với nhiều trải nghiệm và thử thách thú vị đang đợi bạn chinh phục cùng đồng đội. Hãy cùng nhau chuẩn bị thật tốt để trải nghiệm trọn vẹn nhất tại sự kiện nhé!
     </p>
-
-    <h2
-      style="
-        color: #002855;
-        margin: 20px 0 10px;
-        font-size: 16px;
-        font-weight: bold;
-      "
-    >
-      1. Thông tin Runner-kit
-    </h2>
-    <p style="margin: 0 0 5px; font-weight: bold">
-      Dành cho Hạng vé Happy Run:
+    <p>
+      💡 <span style="margin: 0 1px; font-weight: bold">Hãy chuẩn bị thật tốt</span> để tận hưởng từng khoảnh khắc trọn vẹn nhất!
     </p>
-
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">1 áo Happy Run</li>
-      <li style="margin-bottom: 5px">1 nón Happy Run</li>
-      <li style="margin-bottom: 5px">1 bảng tên (BIB)</li>
-      <li style="margin-bottom: 5px">1 vé Happy Run</li>
-      <li style="margin-bottom: 5px">
-        Huy chương Happy Run sẽ nhận sau khi hoàn thành về đích
-      </li>
-    </ul>
-
-    <p style="margin: 0 0 5px; font-weight: bold">
-      Dành cho Hạng vé Well-being:
+    <p>
+      🎯 <span style="margin: 0 1px; font-weight: bold">Hẹn gặp bạn tại vạch xuất phát cùng những trải nghiệm đáng nhớ!</span>
     </p>
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">1 áo Happy Run</li>
-      <li style="margin-bottom: 5px">1 nón Happy Run</li>
-      <li style="margin-bottom: 5px">1 bảng tên (BIB)</li>
-      <li style="margin-bottom: 5px">1 vé Well-being</li>
-      <li style="margin-bottom: 5px">
-        Huy chương Happy Run sẽ nhận sau khi hoàn thành về đích
-      </li>
-      <li style="margin-bottom: 5px">
-        Huy hiệu V.I.P sẽ nhận tại bàn check-in đầu sự kiện
-      </li>
-      <li style="margin-bottom: 5px">
-        Quà tặng Well-being nhận khi hoàn thành cung đường chạy (tại khu vực
-        sảnh chính)
-      </li>
-    </ul>
-
-    <!-- Thời gian và địa điểm nhận Runner-kit -->
-    <h2
-      style="
-        color: #002855;
-        margin: 20px 0 10px;
-        font-size: 16px;
-        font-weight: bold;
-      "
-    >
-      2. Thời gian và địa điểm nhận Runner-kit
-    </h2>
-    <p style="margin: 0 0 5px; font-weight: bold">
-      Dành cho đối tượng Học sinh - Phụ huynh:
+    <p>
+      📍 <span style="margin: 0 1px; font-weight: bold">Thời gian & địa điểm:</span> 7:00 - 10:00 | Ngày 29/03/2025 | <span style="margin: 0 1px; font-weight: bold">Wellspring Saigon</span>
     </p>
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">
-        Runner kit được BTC phát về theo đơn vị lớp
-      </li>
-      <li style="margin-bottom: 5px">Ngày nhận: 26 - 27/03/2025</li>
-    </ul>
-
-    <p style="margin: 0 0 5px; font-weight: bold">
-      Dành cho đối tượng Giáo viên - Nhân viên:
+    <p>
+      🏆 <span style="margin: 0 1px; font-weight: bold">Sẵn sàng bứt phá, lan tỏa tinh thần thể thao & khởi động mùa hè đầy cảm hứng nhé!</span>
     </p>
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">Địa điểm: Phòng Studio - tầng G</li>
-      <li style="margin-bottom: 5px">
-        Thời gian: 9:30 - 11:00 sáng, ngày 27/03/2025
-      </li>
-    </ul>
-
-    <p style="margin: 0 0 10px; font-style: italic">
-      LƯU Ý: Sau khi nhận bộ kit, vui lòng kiểm tra kỹ bộ kit của mình ngay sau
-      khi nhận. Trong trường hợp mất/thiếu, BTC sẽ không chịu trách nhiệm phát
-      sinh sau đó.
-    </p>
-
-    <p style="margin: 0 0 10px">
-      Nếu có thắc mắc cần giải đáp, vui lòng liên hệ qua email BTC:
-      <a
-        href="mailto:happyrun2025@wellspringsaigon.edu.vn"
-        style="color: #000000; text-decoration: underline"
-      >
-        happyrun2025@wellspringsaigon.edu.vn
-      </a>
-    </p>
-
-    <p style="margin: 0 0 20px">
-      Xin cảm ơn,<br />
-      Ban tổ chức Happy Run 2025
-    </p>
+    <p style="color:#fb6d23">Hẹn gặp lại bạn tại Happy Run 2025 với những trải nghiệm thật thú vị đang chờ đón!
+      Ban tổ chức Happy Run 2025</p>
   </div>
 
   <div style="border-top: 1px solid #cccccc; margin: 20px 0"></div>
 
   <!-- English Version -->
   <div class="section en-language">
-    <p style="margin: 0 0 10px">Hello WISers,</p>
+    <p style="margin: 0 0 10px">Hey WISers,</p>
     <p style="margin: 0 0 10px">
-      The Organizing Team would like to notify you of the time and location for
-      Runner kit pick-up:
+      Only 1 day left until the Happy Run 2025 “Set your pace - Embrace wellness” event will officially begin with many interesting experiences and challenges waiting for you to conquer with your teammates. Let's prepare well together to enjoy the event to the fullest!
     </p>
-
-    <!-- Runner kit information -->
-    <h2
-      style="
-        color: #002855;
-        margin: 20px 0 10px;
-        font-size: 16px;
-        font-weight: bold;
-      "
-    >
-      1. Runner kit information
-    </h2>
-    <p style="margin: 0 0 5px; font-weight: bold">
-      For Happy Run ticket class:
+    <p>
+      💡 <span style="margin: 0 1px; font-weight: bold">Make sure you’re well-prepared</span> to enjoy every moment to the fullest!
     </p>
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">1 T-shirt</li>
-      <li style="margin-bottom: 5px">1 cap</li>
-      <li style="margin-bottom: 5px">1 name tag (BIB)</li>
-      <li style="margin-bottom: 5px">1 ticket</li>
-      <li style="margin-bottom: 5px">
-        The runner will receive the medal after finishing the race
-      </li>
-    </ul>
-
-    <p style="margin: 0 0 5px; font-weight: bold">
-      For Well-being ticket class:
+    <p>
+      🎯 <span style="margin: 0 1px; font-weight: bold">See you at the starting line for an unforgettable experience!</span>
     </p>
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">1 T-shirt</li>
-      <li style="margin-bottom: 5px">1 cap</li>
-      <li style="margin-bottom: 5px">1 name tag (BIB)</li>
-      <li style="margin-bottom: 5px">1 ticket</li>
-      <li style="margin-bottom: 5px">
-        The runner will receive the medal after finishing the race
-      </li>
-      <li style="margin-bottom: 5px">
-        V.I.P badge will be delivered at the check-in table at event day
-      </li>
-      <li style="margin-bottom: 5px">
-        Happy run gift set will be delivered after the runner finishes the race
-        (location: at the main hall)
-      </li>
-    </ul>
-
-    <!-- Time & location -->
-    <h2
-      style="
-        color: #002855;
-        margin: 20px 0 10px;
-        font-size: 16px;
-        font-weight: bold;
-      "
-    >
-      2. Time and location for Runner-kit pick-up
-    </h2>
-    <p style="margin: 0 0 5px; font-weight: bold">
-      For Students &amp; Parents:
+    <p>
+      📍 <span style="margin: 0 1px; font-weight: bold">Time & Location:</span>7:00 - 10:00 | March 29, 2025 |<span style="margin: 0 1px; font-weight: bold">Wellspring Saigon</span>
     </p>
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">Receive the Runner kit at their class</li>
-      <li style="margin-bottom: 5px">Delivery time: 26 - 27/03/2025</li>
-    </ul>
-
-    <p style="margin: 0 0 5px; font-weight: bold">For Teacher &amp; Staff:</p>
-    <ul style="margin: 0 0 10px 20px; padding: 0">
-      <li style="margin-bottom: 5px">
-        Delivery time: 9:30 - 11:00, 27 March, 2025
-      </li>
-      <li style="margin-bottom: 5px">Location: Studio Room (G floor)</li>
-    </ul>
-
-    <p style="margin: 0 0 10px; font-style: italic">
-      Note: After receiving the Runner kit, please double-check your kit at the
-      counter. In case of lost/missing items, The Organizing Team will not be
-      responsible thereafter.
+    <p>
+      🏆 <span style="margin: 0 1px; font-weight: bold">Get ready to push your limits, embrace the sports spirit & kick off an inspiring summer!</span>
     </p>
-
-    <p style="margin: 0 0 10px">
-      If there are any questions or concerns, please contact us at:
-      <a
-        href="mailto:happyrun2025@wellspringsaigon.edu.vn"
-        style="color: #000000; text-decoration: underline"
-      >
-        happyrun2025@wellspringsaigon.edu.vn
-      </a>
-    </p>
-
-    <p style="margin: 0 0 20px">
-      Thank you,<br />
-      Happy Run 2025 Organizing Team
-    </p>
+    <p style="color:#fb6d23">Looking forward to seeing you all at Happy Run 2025 with exciting experiences.
+      Happy Run 2025 Organizing Team</p>
   </div>
 </div>
