happy-run: fix email template reminder

--- a/ws_event_page/templates/emails/hr_event_reminder.html
+++ b/ws_event_page/templates/emails/hr_event_reminder.html
@@ -93,8 +93,9 @@
     </p>
     <p style="color: #fb6d23">
       Hẹn gặp lại bạn tại Happy Run 2025 với những trải nghiệm thật thú vị đang
-      chờ đón! Ban tổ chức Happy Run 2025
+      chờ đón!
     </p>
+    <p style="color: #fb6d23; font-weight: bold">Ban tổ chức Happy Run 2025</p>
   </div>
 
   <div style="border-top: 1px solid #cccccc; margin: 20px 0"></div>
@@ -137,7 +138,10 @@
     </p>
     <p style="color: #fb6d23">
       Looking forward to seeing you all at Happy Run 2025 with exciting
-      experiences. Happy Run 2025 Organizing Team
+      experiences!
+    </p>
+    <p style="color: #fb6d23; font-weight: bold">
+      Happy Run 2025 Organizing Team
     </p>
   </div>
 </div>
