--- a/ws_event_page/templates/emails/hr_runner_kit_notice.html
+++ b/ws_event_page/templates/emails/hr_runner_kit_notice.html
@@ -11,12 +11,7 @@
     margin: auto;
     padding: 10px 0px;
     text-align: justify;
-    background: linear-gradient(
-        rgba(255, 255, 255, 0.9),
-        rgba(255, 255, 255, 0.9)
-      ),
-      url('https://wisers.wellspringsaigon.edu.vn/files/ws-torch.png')
-        center/cover;
+    background: url('https://wisers.wellspringsaigon.edu.vn/files/bg-ws-torch.png');
     background-repeat: no-repeat;
     background-size: 30%;
     background-position: 110% 40vh;
