update happy run event reminder email template

--- a/ws_event_page/templates/emails/hr_event_reminder.html
+++ b/ws_event_page/templates/emails/hr_event_reminder.html
@@ -1,22 +1,13 @@
 <div
   class="wrapper"
   style="
-    width: 100%;
-    margin: auto;
-    padding: 10px 0px;
-    text-align: justify;
     position: relative;
     overflow: hidden;
     width: 100%;
     margin: auto;
     padding: 10px 0px;
     text-align: justify;
-    background: linear-gradient(
-        rgba(255, 255, 255, 0.9),
-        rgba(255, 255, 255, 0.9)
-      ),
-      url('https://wisers.wellspringsaigon.edu.vn/files/ws-torch.png')
-        center/cover;
+    background: url('https://wisers.wellspringsaigon.edu.vn/files/bg-ws-torch.png');
     background-repeat: no-repeat;
     background-size: 30%;
     background-position: 110% 40vh;
