adding approval mechanism

--- a/ws_event_page/templates/emails/gs_registration_approval.html
+++ b/ws_event_page/templates/emails/gs_registration_approval.html
@@ -3,13 +3,13 @@
 <div class="container text-center" style="text-align: center; color: #172a52">
   <div>
     <h1 style="text-align: center">
-      <span style="color: #f05023">BẠN ĐÃ ĐĂNG KÝ THÀNH CÔNG</span>
+      <span style="color: #28a745">ĐĂNG KÝ CỦA BẠN ĐÃ ĐƯỢC PHÊ DUYỆT</span>
       <br />
       <span style="color: #172a52">SỰ KIỆN</span
       ><span style="color: #f5aa1e"> GREATEST SHOW</span>
     </h1>
     <h3 style="text-align: center; color: #3b6dae">
-      YOU HAVE SUCCESSFULLY REGISTERED FOR THE GREATEST SHOW EVENT
+      YOUR REGISTRATION HAS BEEN APPROVED FOR THE GREATEST SHOW EVENT
     </h3>
     <p>
       Mã đăng ký | <em>Registration ID</em>:
@@ -182,19 +182,24 @@
       {% endif %}
     </p>
 
-    <p class="text-center" style="margin-top: 20px; color: #172a52">
-      Chúng tôi sẽ xem xét và phản hồi kết quả trong thời gian sớm nhất.
+    <p class="text-center" style="margin-top: 20px; color: #172a52; font-size: 18px">
+      <strong>Chúc mừng! Đăng ký của bạn đã được phê duyệt.</strong>
       <br />
       <span style="color: #3b6dae">
-        <em
-          >We will review your registration and respond as soon as possible.</em
-        >
+        <em><strong>Congratulations! Your registration has been approved.</strong></em>
+      </span>
+    </p>
+
+    <p class="text-center" style="margin-top: 20px; color: #172a52">
+      Chúng tôi rất mong được gặp bạn tại sự kiện. Vui lòng theo dõi email để nhận thêm thông tin chi tiết.
+      <br />
+      <span style="color: #3b6dae">
+        <em>We look forward to seeing you at the event. Please check your email for further details.</em>
       </span>
     </p>
 
     <p class="text-center" style="margin-top: 30px; color: #172a52">
-      Xin chân thành cảm ơn và hẹn gặp lại các bạn tại sự kiện The Greatest
-      Show!
+      Xin chân thành cảm ơn và hẹn gặp lại các bạn tại sự kiện The Greatest Show!
       <br />
       <span style="color: #3b6dae">
         <em>Thank you and see you at The Greatest Show event!</em>
