Fix groups  section

--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -418,7 +418,7 @@ layer(base);
   }
   @font-face {
     font-family: "Race Champion";
-    src: url(/greatest-shơ-25/fonts/race_champion.ttf);
+    src: url(/happy-run/fonts/race_champion.ttf);
     ascent-override: 90%; /* Điều chỉnh chiều cao phần trên */
     descent-override: 20%; /* Điều chỉnh chiều cao phần dưới */
     line-gap-override: 0%; /* Bỏ khoảng cách dòng */
